--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.devtools.restart.enabled=true
 spring.devtools.livereload.enabled=true
 server.error.include-message=always
 server.error.include-binding-errors=always
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
